--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
         <section id="benifit">
             <div class="container">
                 <div class="media">
-                    <img src="/img/benifit-section.png" alt="Green Foods">
+                    <picture>
+                        <source media="(min-width:640px)" srcset="/img/benifit-section.png">
+                        <img src="/img/Benifit_mobile.png" alt="Green Foods">
+                    </picture>
                 </div>
                 <div class="text">
                     <p class="section-sub-heading">Our Benefit</p>
@@ -192,7 +195,10 @@
                     </button>
                 </div>
                 <div class="media">
-                    <img src="/img/stars-section.png" alt="Stars Section">
+                    <picture>
+                        <source media="(min-width: 640px)" srcset="/img/stars-section.png">
+                        <img src="/img/Starts_mobile.png" alt="Stars Section">
+                    </picture>
                 </div>
             </div>
         </section>
@@ -203,7 +209,7 @@
             <div class="container">
                 <div class="text">
                     <p class="section-sub-heading">Our Features</p>
-                    <h3 class="section-heading">Variety Of Foods</h3>
+                    <h3 class="section-heading">Variety Of Veggie Foods</h3>
                 </div>
                 <div class="grid-section">
                     <!-- Item 01 -->
@@ -269,7 +275,7 @@
                         </div>
                         <h4>Summer Veganie</h4>
                         <div class="price">
-                            <span class="reguler">$35</span><span class="sale">$29</span>
+                            <span class="reguler"><del>$35</del></span><span class="sale">$29</span>
                         </div>
                         <button class="btn outline-btn">Buy Now</button>
                     </div>
@@ -287,7 +293,7 @@
                         </div>
                         <h4>Greanie Seafood</h4>
                         <div class="price">
-                            <span class="reguler">$35</span><span class="sale">$29</span>
+                            <span class="reguler"><del>$35</del></span><span class="sale">$29</span>
                         </div>
                         <button class="btn outline-btn">Buy Now</button>
                     </div>
@@ -305,7 +311,7 @@
                         </div>
                         <h4>Fresh Vegetable</h4>
                         <div class="price">
-                            <span class="reguler">$35</span><span class="sale">$29</span>
+                            <span class="reguler"><del>$35</del></span><span class="sale">$29</span>
                         </div>
                         <button class="btn outline-btn">Buy Now</button>
                     </div>
@@ -323,7 +329,7 @@
                         </div>
                         <h4>Fresh Meatyus</h4>
                         <div class="price">
-                            <span class="reguler">$35</span><span class="sale">$29</span>
+                            <span class="reguler"><del>$35</del></span><span class="sale">$29</span>
                         </div>
                         <button class="btn outline-btn">Buy Now</button>
                     </div>
@@ -358,26 +364,26 @@
                 <div class="widget widgets2">
                     <h4>About Us</h4>
                     <ul>
-                        <li>About Us</li>
-                        <li>Service Us</li>
-                        <li>Contact</li>
-                        <li>Company</li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Service Us</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Company</a></li>
                     </ul>
                 </div>
                 <div class="widget widgets3">
                     <h4>Company</h4>
                     <ul>
-                        <li>Partnership</li>
-                        <li>Terms of Use</li>
-                        <li>Privacy</li>
-                        <li>Sitemap</li>
+                        <li><a href="#">Partnership</a></li>
+                        <li><a href="#">Terms of Use</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Sitemap</a></li>
                     </ul>
                 </div>
                 <div class="widget widgets4">
                     <h4>Get in touch</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
                     <form>
-                        <input type="email" name="email">
+                        <input type="email" name="email" placeholder="Email">
                         <input type="submit" value="Subscribe">
                     </form>
                 </div>
